@@ -1,3 +1,17 @@
-EBUILD leechcraft-sb2-9999.ebuild 504 SHA256 665b118a3b185405e085cbdbd8d205aeeaae3bee5633eab9ab3812e5889a77ed SHA512 649ccd92465432a75a85b91a88cb1c59cfbdeb626e183594f7e00a6940bfa937a16168f534c651c15e1a83cbb697d151634cbab433cdaaade7c3cfbccf1f3ee8 WHIRLPOOL f3e82961d87eb0e572a5e5810f7582075d15fbad4f2d1e77fc4bd0dc9a37807bf36f56269356188fb9d9e62e945c2f1f5505b65cf00331fcc714104ffa8c1ad8
-MISC ChangeLog 393 SHA256 03f4c930df88e1a8b01c4c1888961f079e4e17f73be4419186df6d586dca4619 SHA512 0cdd636f54686ba1c33972d54b57ae096d3b5053c41e19cf87740adc1866d0e777bd8a8f91202e62597f1928ad0540d6f2a6bb534ac05fe80933bf60ae60a964 WHIRLPOOL fc686b08ce008c9b8dd4cfb47cc46b368f87cae8aac2b66f61427e4f0ecba3d6fedb67ed73c63d89ce311b43fe6070377ba96360065ebfbfd40a5cbcae0a9a0c
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+EBUILD leechcraft-sb2-9999.ebuild 522 SHA256 f05f7c0cb4281fbd390a628f0706addd842557d02adb23031a44ae081ca25a9d SHA512 48e0297494497421ce379c40d430c59746ae285cc899b0a1b5e3cdd9273a9a2f183192f357c2dc3201e148ca28a21b2d02ed10dd259a72ab1d8e3d01d17e8efe WHIRLPOOL 91b891420c9b520cf6c1b8d97cbf5272ef4bbecaaaf861de9bb67ab0e33cbc77b0410f09e9b5c8168f7754b023a47204f24875cf03aeebbcba67a5a033f5ba1c
+MISC ChangeLog 497 SHA256 dccb71673f8903d799afb1ad1cc3f9dab54bd619f2c5868e3c497f83cf7c2bcb SHA512 b22777a930a423893bfa030a83aac93f80057dafbc8343ec0ca675603bb10b7e16cc1a6b95672a537b2c1de5f81ad77b3d366ed12dd6cd1d2dd6db3b7b5629b0 WHIRLPOOL f5e45391399763a47dd17e0c275d94f615163cd5e423d4357d2b2258abfd33f1585b5ed50694944386dd218025581582ede13429f84966f5f7dcfce8f01a8c43
 MISC metadata.xml 164 SHA256 d3d50c47cc72568dcc457fe11ddfc6849ba6572bc2d581aad1deac910ee1d488 SHA512 ce478accd06c9c530d86b3ca8abaf3680428a7ab07ed8bb5b78e60c7e3240c3be349993f73e2ef904642efec5cd9c8abb7196675b46723103290ef9ab5d1cc10 WHIRLPOOL 4c2d59059bc69ff27c720b093f582968e2778d23875e0f7d3edba0ec6634e1b50e7403974c4a32638eeaae4d7baf45ca163e5e80f5bd692590b7d075882d51f0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQ0xeGAAoJEAmJmMX429reRhgH/1nU1ch/AtFMcfjb43NdD9Mz
+fqZ09WlgnMjFl2SVuv2QmlxcQ0lMxqezWcCIzvDuRbKNmRDoNdog5Wnj8gdI+gyR
+yH6l4LKRFrvUG2mPRadq8Z7vtzBLgHEpwIfKavbTYK6oL+aHnQLQCz5YbNxKmI6D
+NINm6xMpTmGbnkmDf0FLuDqmIfPX1X5Pot5/YF5le6NyVKyTFW/mXHjdgkD9968R
+KwFzoZVN5VsGi/4U0bpsctadZiaj4fku2oTz995xuZ6kzlKe6vPbE1JBU3ER9pNT
+9YbuB0lS93YW3RzdTMdOZi6TG5onBPWtMAOyK/EzgJOSP47/UEbrDQJJ92O3IQo=
+=q7TE
+-----END PGP SIGNATURE-----
